--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Big Brother - Моя библиотека</title>
     <link rel="stylesheet" href="css/index.min.css">
-    <script src="js/index.min.js"></script>
+    <script src="js/index.min.js" defer></script>
 </head>
 <body>
   <section class="library">
     <header class="header library__header">
-      <div class="container">
-        <img src="img/logo.svg" alt="Логотип big brother">
+      <div class="container header__container">
+        <img class="header__logo" src="img/logo.svg" alt="Логотип big brother" width="61" height="41">
 
         <button class="header__btn-add">Добавить книгу</button>
 
-        <button class="header__btn header__btn_search">поиск</button>
+        <button class="header__btn header__btn_search" aria-label="Найти книгу"></button>
       </div>
     </header>
 
@@ -76,7 +76,7 @@
       <h2 class="visually-hidden">Список книг</h2>
       <ul class="library__list">
         <li class="library__item">
-          <a href="/book">
+          <a href="/book" data-navigo>
             <article class="cart">
               <div class="cart__wrapper">
                 <img src="img/1984.jpg" alt="Обложка 1984" class="cart__image">
@@ -90,11 +90,12 @@
                 <p class="cart__author">Джордж Оруэлл</p>
 
                 <p class="cart__description">
-                  Главный герой — Уинстон Смит — живёт в Лондоне, работает в Министерстве правды и является членом внешней партии. Он не разделяет партийные лозунги и идеологию и в глубине души сильно сомневается в партии, окружающей действительности и вообще во всём том, в чём только можно сомневаться. Чтобы «выпустить пар» и не совершить какой-нибудь безрассудный поступок, ведёт дневник, в котором старается излагать все свои сомнения. На людях же притворяется приверженцем партийных идей. Однако опасается, что девушка Джулия, работающая в том же министерстве, шпионит за ним и хочет разоблачить его. В то же время полагает, что высокопоставленный сотрудник их министерства, член внутренней партии некий О’Брайен также не разделяет мнения партии и является подпольным революционером.
+                  Главный герой — Уинстон Смит — живёт в Лондоне, работает в Министерстве правды и является...
                 </p>
 
                 <div class="cart__rating">
                   <img class="cart__rating-star" src="img/star.svg" alt="Рейтинг 4 из 5">
+                  <img class="cart__rating-star" src="img/star.svg" alt="">
                   <img class="cart__rating-star" src="img/star.svg" alt="">
                   <img class="cart__rating-star" src="img/star.svg" alt="">
                   <img class="cart__rating-star" src="img/star-o.svg" alt="">
@@ -105,7 +106,7 @@
         </li>
 
         <li class="library__item">
-          <a href="/book">
+          <a href="/book" data-navigo>
             <article class="cart">
               <div class="cart__wrapper">
                 <img src="img/temp.jpg" alt="Обложка 1984" class="cart__image">
@@ -137,16 +138,22 @@
 
 
     <footer class="footer">
-      <button class="footer__btn library__add-btn" aria-label="Добавить книгу"></button>
+      <button class="footer__btn library__add-btn" aria-label="Добавить книгу">
+        <svg width="44" height="44" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="22" cy="22" r="22" fill="currentColor"/>
+          <rect x="21.7767" y="9.21667" width="0.433333" height="25.5667" fill="#242424" stroke="white" stroke-width="0.433333"/>
+          <rect x="9.21667" y="22.2233" width="0.433333" height="25.5667" transform="rotate(-90 9.21667 22.2233)" fill="#242424" stroke="white" stroke-width="0.433333"/>
+        </svg>
+      </button>
     </footer>
   </section>
 
-  <section class="book">
+  <section class="book hidden">
     <header class="header book__header">
-      <div class="container">
-        <button class="header__btn header__btn_back">назад</button>
+      <div class="container header__container">
+        <button class="header__btn header__btn_back" aria-label="Назад"></button>
 
-        <button class="header__btn header__btn_delete">удалить</button>
+        <button class="header__btn header__btn_delete"></button>
       </div>
     </header>
 
@@ -154,7 +161,7 @@
       <div class="book__wrapper">
         <img class="book__image" src="img/1984.jpg" alt="Обложка 1984">
 
-        <button class="book__label">хочу прочитать</button>
+      <button class="book__label book__hidden_label">хочу прочитать</button>
       </div>
 
       <div class="book__content">
@@ -163,6 +170,7 @@
         <p class="book__author">Джоан Роулинг</p>
         <div class="book__rating">
           <img class="book__rating-star" src="img/star.svg" alt="Рейтинг 5 из 5">
+          <img class="book__rating-star" src="img/star.svg" alt="">
           <img class="book__rating-star" src="img/star.svg" alt="">
           <img class="book__rating-star" src="img/star.svg" alt="">
           <img class="book__rating-star" src="img/star.svg" alt="">
@@ -181,12 +189,13 @@
     </footer>
   </section>
 
-  <section class="add">
+  <section class="add hidden">
+    <h2 class="visually-hidden">Добавить книгу</h2>
     <header class="header add__header">
-      <div class="container">
-        <button class="header__btn header__btn_back">назад</button>
+      <div class="container header__container">
+        <button class="header__btn header__btn_back" aria-label="Найти книгу"></button>
 
-        <button class="header__btn header__btn_search">поиск</button>
+        <button class="header__btn header__btn_search"></button>
       </div>
     </header>
 
