--- a/src/index.html
+++ b/src/index.html
@@ -288,7 +288,7 @@
             <label class="upload__label">
               <img src="about:blank" class="upload__preview" alt="Превью изображения">
 
-              <input type="file" class="upload__file" accept="image/*">
+              <input type="file" name='file' class="upload__file" accept="image/*">
             </label>
           </div>
         </fieldset>
