--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
   <section class="book hidden">
     <header class="header book__header">
       <div class="container header__container">
-        <button class="header__btn header__btn_back" aria-label="Назад"></button>
+        <button class="header__btn header__btn_back book__btn_back" aria-label="Назад"></button>
 
         <button class="header__btn header__btn_delete"></button>
       </div>
@@ -120,7 +120,7 @@
     <h2 class="visually-hidden">Добавить книгу</h2>
     <header class="header add__header">
       <div class="container header__container">
-        <button class="header__btn header__btn_back" aria-label="Найти книгу"></button>
+        <button class="header__btn header__btn_back add__btn_back" aria-label="Найти книгу"></button>
 
         <button class="header__btn header__btn_search"></button>
       </div>
